--- a/cv-builder-backend/package.json
+++ b/cv-builder-backend/package.json
@@ -4,10 +4,9 @@
   "description": "CV Builder Backend API",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "npm run build && node --env-file=.env dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only -r dotenv/config src/index.ts",
     "build": "tsc",
     "start": "npm run build && node --env-file=.env dist/index.js",
-    
     "start:prod": "node --env-file=.env dist/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
@@ -19,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
