--- a/cv-builder-frontend/package.json
+++ b/cv-builder-frontend/package.json
@@ -13,6 +13,8 @@
     "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
+    "dotenv": "^17.2.3",
+    "lodash": "^4.17.21",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-hook-form": "^7.69.0",
